--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,30 @@
-mock==2.0.0
-pytest==2.9.1
-tox==2.3.1
-python-coveralls==2.7.0
-pytest-cov==2.2.1
-nagiosplugin==1.2.4
-beautifulsoup4==4.4.1
-lxml==3.6.0
-requests==2.10.0
-responses==0.5.1
-wheel==0.29.0
+attrs==21.4.0
+beautifulsoup4==4.11.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+coverage==6.3.2
+distlib==0.3.4
+filelock==3.6.0
+idna==3.3
+iniconfig==1.1.1
+lxml==4.8.0
+mock==4.0.3
+nagiosplugin==1.3.3
+packaging==21.3
+platformdirs==2.5.2
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.8
+pytest==7.1.2
+pytest-cov==3.0.0
+python-coveralls==2.9.3
+PyYAML==6.0
+requests==2.27.1
+responses==0.20.0
+six==1.16.0
+soupsieve==2.3.2.post1
+toml==0.10.2
+tomli==2.0.1
+tox==3.25.0
+urllib3==1.26.9
+virtualenv==20.14.1
