chore: update docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,4 +75,4 @@ universal=1
 exclude = docs
 
 [semantic_release]
-version_variable = setup.py:__version__
+version_variable = setup.py:__version__,check_pa/__init__.py:__version__
