--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,12 @@
-branches:
-  only:
-  - /.*/
-
 language: python
-python: 3.6
+python: 3.5
 
-matrix:
-  include:
-  - python: "3.6"
-    env: TOXENV=py36
-  - python: "3.5"
-    env: TOXENV=py35
-  - python: "3.4"
-    env: TOXENV=py34
-  - python: "2.7"
-    env: TOXENV=py27
-  - python: "pypy"
-    env: "TOXENV=pypy"
+env:
+  - TOXENV=py35
+  - TOXENV=py34
+  - TOXENV=py33
+  - TOXENV=py27
+  - TOXENV=pypy
 
 install: pip install -U tox
 
