chore: update versioning config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = check_paloalto_ng
-version = 0.3.2
+version = 0.7.1
 author = Christian Jonak-Möchel
 author_email = christian@jonak.org
 license = CC BY-ND 4.0
@@ -76,3 +76,4 @@ exclude = docs
 
 [semantic_release]
 version_variable = setup.py:__version__,check_pa/__init__.py:__version__
+version_toml = "setup.cfg:metadata.version"
